--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <title>PwaSample</title>
   <base href="/">
+  <meta name="description" content="Sample PWA">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
